# thermal-viewer

./: .gitignore  README.md  build.yml  main.py  pyproject.toml  requirements.txt  run.sh
capture/: __init__.py  camera_control.py  device_detect.py  thermal_capture.py  visible_capture.py
processing/: __init__.py  ai_upscale.py  colormap.py  contour.py  gpu_scale.py  temperature.py
tools/: __init__.py  screenshot.py
ui/: __init__.py  camera_selector.py  console_log.py  control_panel.py  main_window.py  roi_modal.py  thermal_view.py
